header start here

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="lg:flex hidden  lg:block sm:block">
               <div>
                 <ul class="lg:flex gap-5 hidden lg:justify-between">
-                    <div class="lg:flex gap-5 hidden lg:justify-between">
+                    <div class="lg:flex items-center gap-5 hidden lg:justify-between">
                         <li class="text-orange-400 ">About</li>
                         <li class="text-sky-400">Education</li>
                         <li class="text-cyan-400">Skills</li>
