section 1 start here

--- a/index.html
+++ b/index.html
@@ -193,12 +193,29 @@
                          <li class="menu link4"><a>Admission</a></li>
                           <li class="menu link5"><a>Achievements</a></li>
                           <li class="menu link6"><a>Contact</a></li>
+                          <li class="bg-blue-600 rounded-lg h-10 w-20">
+                        <b class="text-white">
+                            Resume
+                        </b>
+                        </li>
                     </ul>
                       </div>
                        
              </div>
 
 </header>
-  
+<main>
+    <section id="home" class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-blue-50 via-white to-blue-100 pt-20 overflow-hidden">
+        <div>
+            <div class="rounded-full">
+                <img src="img/My img.jpg" alt="" class="rounded-full h-45 w-44">
+            </div>
+        </div>
+    </section>
+    <section>
+
+    </section>
+</main>
+  <div class="px-4 py-4 flex flex-col gap-4 text-sm font-semibold bg-white/95 dark:bg-gray-900/95 backdrop-blur-md shadow-lg rounded-b-2xl">…</div>flex
 </body>
-</html><section id="home" class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-blue-50 via-white to-blue-100 pt-20 overflow-hidden">
+</html>
