--- a/index.html
+++ b/index.html
@@ -216,6 +216,6 @@
 
     </section>
 </main>
-  <div class="px-4 py-4 flex flex-col gap-4 text-sm font-semibold bg-white/95 dark:bg-gray-900/95 backdrop-blur-md shadow-lg rounded-b-2xl">…</div>flex
+  <div class="px-4 py-4 flex flex-col gap-4 text-sm font-semibold bg-white/95 dark:bg-gray-900/95 backdrop-blur-md shadow-lg rounded-b-2xl"></div>
 </body>
 </html>
