--- a/index.html
+++ b/index.html
@@ -205,17 +205,40 @@
 
 </header>
 <main>
-    <section id="home" class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-blue-50 via-white to-blue-100 pt-20 overflow-hidden">
-        <div>
-            <div class="rounded-full">
-                <img src="img/My img.jpg" alt="" class="rounded-full h-45 w-44">
+    <section class="flex relative justify-center bg-orang-500-to-b from-blue-300  items-center ">
+        <div class="grid relative justify-center bg-blue-500-to-b from-gray-300  items-center justy">
+            <div class=" flex rounded-full items-center pt-32  justify-center">
+                <img src="img/My img.jpg" alt="" class="rounded-full h-45 border-4 border-white relative w-40 h-40 mx-auto rounded-full border-4 border-white shadow-xl object-cover hover:scale-105 transition-transform duration-500 w-44">
+            </div>
+            <div class="text-center">
+              <h1 class="text-5xl font-extrabold text-bould lg:hidden bg-gradient-to-r from-blue-600 via-purple-600 to-cyan-500 bg-clip-text text-transparent drop-shadow-lg mt-8 md:hidden ">
+                MD FAZLA <br class=""> RABBI
+              </h1>
+              <h1 class="text-6xl font-extrabold text-bould hidden mt-8 bg-gradient-to-r from-blue-600 via-purple-600 to-cyan-500 bg-clip-text text-transparent drop-shadow-lg lg:block">
+                MD FAZLA RABBI
+              </h1>
+
+              <p class="mt-3">
+                 Frontend developer (HTML, CSS, Javascript (ES6), TailwindCSS, Bootstrap)
+              </p>
+            </div>
+            <div class="mt-10 flex flex-wrap justify-center gap-5">
+              <div>
+                <button class="px-7 -ml-7 py-3 mx-20  rounded-xl bg-gradient-to-r from-indigo-600 to-cyan-500 text-white font-semibold shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition duration-300">📄 Download Resume</button>
+              </div>
+
+              <div class="inline-block">
+                <button class="px-7 -ml-19 py-3 items-center rounded-xl border-2 border-indigo-500 text-indigo-600 hover:bg-indigo-50 dark:hover:bg-gray-800 font-semibold transform hover:-translate-y-1 transition duration-300">📬 Contact Me</button>
+              </div>
+            
+             
             </div>
         </div>
     </section>
-    <section>
-
+    <section><h1 class="text-5xl md:text-6xl font-extrabold mt-8 bg-gradient-to-r from-blue-600 via-purple-600 to-cyan-500 bg-clip-text text-transparent drop-shadow-lg">Mohammad Al Amin</h1>
+<!--<section class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-blue-50 via-white to-blue-100 pt-20 overflow-hidden">-->
     </section>
 </main>
   <div class="px-4 py-4 flex flex-col gap-4 text-sm font-semibold bg-white/95 dark:bg-gray-900/95 backdrop-blur-md shadow-lg rounded-b-2xl"></div>
 </body>
-</html>
+</html><div class="mt-10 flex flex-wrap justify-center gap-5">…</div>
